=== 2.0 Preview Release 4 (1.99.3) / 19 Apr 2008

* Make sure HOME is set to something sane, even on OS's that don't set it by default [Jamis Buck]

* Add a :passphrase option to specify the passphrase to use with private keys [Francis Sullivan]

* Open a new auth agent connection for every auth-agent channel request [Jamis Buck]


=== 2.0 Preview Release 3 (1.99.2) / 10 Apr 2008

* Session properties [Jamis Buck]

* Make channel open failure work with a callback so that failures can be handled similarly to successes [Jamis Buck]


=== 2.0 Preview Release 2 (1.99.1) / 22 Mar 2008

* Partial support for ~/.ssh/config (and related) SSH configuration files [Daniel J. Berger, Jamis Buck]

* Added Net::SSH::Test to facilitate testing complex SSH state machines [Jamis Buck]

* Reworked Net::SSH::Prompt to use conditionally-selected modules [Jamis Buck, suggested by James Rosen]

* Added Channel#eof? and Channel#eof! [Jamis Buck]

* Fixed bug in strict host key verifier on cache miss [Mike Timm]


=== 2.0 Preview Release 1 (1.99.0) / 21 Aug 2007

* First preview release of Net::SSH v2